--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -742,7 +742,8 @@ body {
     font-size: 1rem;
 }
 
-.login-error-card .hr-text {
+.login-error-card .hr-text,
+.login-generic-card .hr-text {
     margin: 1.5rem 0;
 }
 
