--- a/src/main/resources/templates/casGenericSuccessView.html
+++ b/src/main/resources/templates/casGenericSuccessView.html
@@ -5,54 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title th:text="#{screen.success.header}"></title>
+    <title th:text="#{screen.generic.login.header}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag"/>
 </head>
 
 <body>
-<main role="main" class="container mt-3 mb-3">
-    <div layout:fragment="content" class="row">
-        <div class="w-100 m-auto mdc-card p-4">
+    <main role="main" class="container mt-3 mb-3">
+        <div layout:fragment="content" class="row">
 
-            <h2 th:utext="#{screen.success.header}"></h2>
-            <p th:utext="#{screen.success.success(${authentication.principal.id})}"></p>
-            <p th:unless="${#maps.isEmpty(authentication.principal.attributes)}">
+            <div class="banner-generic m-auto mdc-card p-4">
 
-                The following attributes are resolved for <strong th:utext="${authentication.principal.id}" />:
-
-                <div class="w-100 mdc-data-table mx-auto my-4" id="divPrincipalAttributes">
-                    <table id="attributesTable" class="mdc-data-table__table" style="white-space: unset">
-                        <thead>
-                        <tr class="mdc-data-table__header-row">
-                            <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Attribute</th>
-                            <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Value(s)</th>
-                            <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Type</th>
-                        </tr>
-                        </thead>
-                        <tbody class="mdc-data-table__content">
-                        <tr th:each="attribute : ${authentication.principal.attributes}" class="mdc-data-table__row">
-                            <td class="mdc-data-table__cell"><code><span th:utext="${attribute.key}"/></code></td>
-                            <td class="mdc-data-table__cell"><code><span th:utext="${attribute.value}"/></code></td>
-                            <td class="mdc-data-table__cell"><code>Principal</code></td>
-                        </tr>
-                        <tr th:each="attribute : ${authentication.attributes}" class="mdc-data-table__row">
-                            <td class="mdc-data-table__cell"><code><span th:utext="${attribute.key}"/></code></td>
-                            <td class="mdc-data-table__cell"><code><span th:utext="${attribute.value}"/></code></td>
-                            <td class="mdc-data-table__cell"><code>Authentication</code></td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div class="login-generic-card">
+                    <div th:replace="fragments/osfbannerui :: osfBannerUI">
+                        <a href="fragments/osfbannerui.html"></a>
+                    </div>
+                    <hr class="my-4" />
+                    <h2 th:utext="#{screen.generic.login.heading}"></h2>
+                    <p th:utext="#{screen.generic.login.message}"></p>
+                    <div class="form-button-inline">
+                        <a class="mdc-button mdc-button--raised button-osf-green" th:href="@{#{osf.home.url}}">
+                            <span class="mdc-button__label" th:utext="#{screen.generic.button.backtoosf}"></span>
+                        </a>
+                        <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.logout.url})}">
+                            <span class="mdc-button__label" th:utext="#{screen.generic.button.logout}"></span>
+                        </a>
+                    </div>
+                    <hr class="hr-text" data-content="DEVELOPING MODE ONLY" />
+                    <div class="form-button">
+                        <button id="buttonViewAuthenticationDetails" type="button"
+                            class="mdc-button mdc-button--raised button-osf-red"
+                            onclick="showAuthenticationDetails();">
+                            <span class="mdc-button__label" th:utext="#{screen.generic.button.viewdetails}"></span>
+                        </button>
+                        <button id="buttonHideAuthenticationDetails" type="button" style="display: none;"
+                            class="mdc-button mdc-button--raised button-osf-red"
+                            onclick="hideAuthenticationrDetails();">
+                            <span class="mdc-button__label" th:utext="#{screen.generic.button.hidedetails}"></span>
+                        </button>
+                    </div>
+                    <div id="authenticationDetails" class="pre-formatted-small word-break-all" style="display: none;">
+                        <p th:unless="${#maps.isEmpty(authentication.principal.attributes)}">
+                            The following attributes are resolved for <strong th:utext="${authentication.principal.id}"></strong>:
+                            <div class="w-100 mdc-data-table mx-auto my-4" id="divPrincipalAttributes">
+                                <table id="attributesTable" class="mdc-data-table__table" style="white-space: unset">
+                                    <thead>
+                                    <tr class="mdc-data-table__header-row">
+                                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Attribute</th>
+                                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Value(s)</th>
+                                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Type</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody class="mdc-data-table__content">
+                                    <tr th:each="attribute : ${authentication.principal.attributes}" class="mdc-data-table__row">
+                                        <td class="mdc-data-table__cell"><code><span th:utext="${attribute.key}"></span></code></td>
+                                        <td class="mdc-data-table__cell"><code><span th:utext="${attribute.value}"></span></code></td>
+                                        <td class="mdc-data-table__cell"><code>Principal</code></td>
+                                    </tr>
+                                    <tr th:each="attribute : ${authentication.attributes}" class="mdc-data-table__row">
+                                        <td class="mdc-data-table__cell"><code><span th:utext="${attribute.key}"></span></code></td>
+                                        <td class="mdc-data-table__cell"><code><span th:utext="${attribute.value}"></span></code></td>
+                                        <td class="mdc-data-table__cell"><code>Authentication</code></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </p>
+                    </div>
                 </div>
+            </div>
 
-            </p>
-            <p th:utext="#{screen.success.security}"></p>
+            <script type="text/javascript" th:inline="javascript">
+                let div = document.querySelector('#divPrincipalAttributes');
+                new mdc.dataTable.MDCDataTable(div);
+
+                /*<![CDATA[*/
+                function showAuthenticationDetails() {
+                    $("#buttonViewAuthenticationDetails").hide()
+                    $("#buttonHideAuthenticationDetails").show()
+                    $("#authenticationDetails").show()
+                }
+                function hideAuthenticationrDetails() {
+                    $("#buttonViewAuthenticationDetails").show()
+                    $("#buttonHideAuthenticationDetails").hide()
+                    $("#authenticationDetails").hide()
+                }
+                /*]]>*/
+            </script>
+
         </div>
-
-        <script type="text/javascript" th:inline="javascript">
-            let div = document.querySelector('#divPrincipalAttributes');
-            new mdc.dataTable.MDCDataTable(div);
-        </script>
-    </div>
-</main>
+    </main>
 </body>
+
 </html>
