--- a/src/main/resources/templates/fragments/osfbannerui.html
+++ b/src/main/resources/templates/fragments/osfbannerui.html
@@ -12,7 +12,7 @@
 
 <body>
     <main role="main" class="container mt-3 mb-3">
-        <div th:fragment="osfBannerUI" id="osfbannerui" class="mb-4 service-ui">
+        <div th:fragment="osfBannerUI" id="osfbannerui" class="mb-4 service-ui text-center">
             <img id="servicelogo" class="service-ui-logo" src="/images/osf-banner.png" />
         </div>
     </main>
