--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,3 @@
-<footer class="py-4 d-flex justify-content-center cas-footer">
-    <span id="copyright" th:utext="#{copyright}" class="mr-2 d-inline-block"></span>
+<footer class="py-4 d-flex justify-content-center cas-footer cas-footer-osf">
+    <span id="copyright" th:utext="#{copyright.cos}" class="mr-2 d-inline-block copyright"></span>
 </footer>
