--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -27,7 +27,7 @@
                     <h2 th:utext="#{screen.unavailable.heading}"></h2>
                     <div th:utext="#{screen.unavailable.message}"></div>
                 </section>
-                <section class="pre-formatted-small word-break-all">
+                <section id="errorInfo" class="pre-formatted-small word-break-all">
                     <pre id="initiatorUrl"></pre>
                     <pre th:utext="${'Error: ' + status + ' - ' + error}"></pre>
                     <pre th:utext="${'Timestamp: ' + #dates.formatISO(#dates.createNow())}"></pre>
