--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -114,6 +114,12 @@ aside, section, main {
     display: flex;
 }
 
+.main-background-gradient {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.80)), url(/images/dark-blue-gradient.png) center center no-repeat;
+    background-size: cover;
+    border-radius: 0.75rem 0 0 0.75rem;
+}
+
 .flex-grow-1 {
     flex-grow: 1;
 }
@@ -656,7 +662,7 @@ button.close {
  ******************************************/
 
 :root {
-    --cas-theme-osf-navbar: #263947;
+    --cas-theme-osf-navbar: #24384a;
     --cas-theme-osf-surface: #f7f7f7;
     --cas-theme-osf-footer: #efefef;
     --cas-theme-osf-grey: #eeeeee;
@@ -672,10 +678,8 @@ button.close {
 }
 
 body {
-    background: #f1f8fd;
+    background: var(--cas-theme-osf-navbar);
 
-        /* linear-gradient(to right, #009574d8, #003f7cd8),
-        url(/images/page-background.png) center center no-repeat; */
     background-size: cover;
     background-blend-mode: normal;
     backdrop-filter: brightness(0.8);
@@ -1044,7 +1048,11 @@ body {
 .cas-footer-osf {
     text-align: center;
     flex-direction: column;
-    background: var(--cas-theme-osf-footer, #efefef);
+    border-radius: 0 0 0 0.75rem;
+
+    > *:first-child {
+        background: var(--cas-theme-osf-footer, #efefef);
+    }
 }
 
 .footer-section {
@@ -1053,6 +1061,11 @@ body {
     flex-wrap: wrap-reverse;
     width: 100%;
     padding: 1rem;
+
+    img {
+        height: 36px;
+        width: 36px;
+    }
 }
 
 @media all and (min-height: 1199.99px) {
@@ -1285,24 +1298,43 @@ body {
     }
 }
 /* Left navigation pane */
+.toggle-nav-input {
+    opacity: 0;
+}
+
+.toggle-nav-label {
+    cursor: pointer;
+    padding: 0.5rem;
+}
+
 .slideout {
     position: fixed;
     top: 0;
     left: 0;
     height: 100%;
-    background: #24384a;
+    background: var(--cas-theme-osf-navbar);
     color: #fff;
     transition: transform 0.3s ease;
+    margin-left: 0 !important;
+}
+
+#slideout-nav {
+    margin-left: 0 !important;
+    margin-top: 37px;
 }
 
 .left-pane {
-    padding: 1.5rem;
+    padding: 8px 12px;
     height: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    background: #24384a; /* TODO: assign variable */
+    background: var(--cas-theme-osf-navbar);
     color: #fff; /* TODO: assign variable */
+
+    .cas-brand-name {
+        font-size: 2rem;
+    }
 }
 
 @media all and (max-width: 1199.99px) {
@@ -1337,18 +1369,19 @@ body {
     }
 }
 
-.left-pane .cas-brand-name {
-        font-size: 2rem;
-}
-
 .left-pane-logo-wrapper {
     display: flex;
     align-items: center;
-}
+    margin-left: 8px;
 
-.left-pane-logo-wrapper .cas-logo {
-    height: 48px;
-    width: 48px;
+    .cas-logo {
+        height: 36px;
+        width: 36px;
+    }
+
+    .cas-brand-name {
+        margin-left: 0.5em;
+    }
 }
 
 .left-pane-nav {
@@ -1360,16 +1393,28 @@ body {
     list-style: none;
     padding: 0;
     margin: 0;
-}
+    margin-top: 2rem;
 
-.left-pane-nav-list a.navbar-link {
-    display: flex;
-    padding: 0.75rem;
-    width: 100%;
-}
+    li {
+        margin-bottom: 2rem;
+    }
 
-.left-pane-nav-list a.navbar-link:hover {
-    background: #384b5c; /* TODO: assign variable */
+    a.navbar-link {
+        display: flex;
+        padding: 0.75rem;
+        gap: 0.5rem;
+        width: 100%;
+        font-weight: 400;
+    }
+
+    a.navbar-link:hover {
+        background: #384b5c; /* TODO: assign variable */
+        border-radius: 0.375rem;
+    }
+
+    .arrow-icon {
+        margin-left: auto;
+    }
 }
 
 /****************************************
